# SystemProgTP

1/: TP1_sockets.txt.md
1/code/: CMakeLists.txt  ex2.c  ex3_b.c  ex4_a.c  ex4_b.c  ex5_client.c  ex5_server.c  ex7_client.c  ex7_server.c  ex8_client.c  ex8_server.c  libSocket.c  libSocket.h
1/code/1/: dataStructEx7.h  ex1.c  ex3_a.c  ex4_a.c  ex4_b.c  ex5_client.c  ex5_server.c  ex7_client.c  ex7_server.c  ex8_client.c  ex8_server.c
1/code/2/: ex1.c  ex2.c
2/: TP2_sockets.txt.md
FileSystem/: .gitignore  Inode.py  SuperBlock.py  TP3_minix.txt.md  TP3_minixfs_lab1_dump_blocs.txt  answers.md  minixDecode.py
